--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3.8'
 
 services:
+  redis:
+    container_name: rails-redis
+    image: redis
+    ports:
+      - '6379:6379'
+    volumes:
+      - ./data/redis:/data/redis
+    restart: always
+
   postgres:
     container_name: rails-postgres
     image: postgres
